--- a/prepare/04_component_state/test.html
+++ b/prepare/04_component_state/test.html
@@ -23,11 +23,13 @@
       super(props)
       // 初始化状态
       this.state = {
-        isLikeMe: true
+        isLikeMe: true,
+        noUse: 'test'
       }
       // 绑定this为组件对象
       this.change = this.change.bind(this)
     }
+
     change () {
       // 更新状态: this.setState()
       // this.state.isLikeMe = !this.state.isLikeMe // 不能更新更新某个状态
@@ -35,10 +37,26 @@
         isLikeMe: !this.state.isLikeMe
       })
     }
+
+    // 使用箭头函数解决this指针问题
+    changeContent = ()=>{
+      console.log('changeContent this:',this);
+      const isLikeMe = !this.state.isLikeMe;
+      // this.setState({isLikeMe:isLikeMe});
+      // 解构方式
+      this.setState({isLikeMe});
+    }
+
+    // 什么时候会触发render重新渲染呢?
+      // state变化时, 哪怕render中没有使用state
+    // 重写组件内的方法, this就是指向Like的
+    // 上面的changeXXX是新增的方法, 在触发时不是以Like为this.
     render () {
-      console.log('render()')
-      const text = this.state.isLikeMe ? '你喜欢我' : '我喜欢你'
-      return <h2 onClick={this.change}>{text}</h2>
+      console.log('state有更新啦render渲染更新DOM:',this);
+      // const text = '没有使用state';
+      const {isLikeMe}= this.state;
+      const text = isLikeMe ? '你喜欢我' : '我喜欢你'
+      return <h2 onClick={this.changeContent} >{text}</h2>
     }
   }
   ReactDOM.render(<Like />, document.getElementById('example'))
