--- a/prepare/03_component_basic/test.html
+++ b/prepare/03_component_basic/test.html
@@ -17,12 +17,14 @@
     // 1. 定义组件
     /*方式1: 工厂函数组件(简单组件)*/
     function MyComponent () {
+      // undefined
+      console.log('Function Component',this);
       return <h2>工厂函数组件(简单组件)</h2>
     }
     /*方式2: ES6类组件(复杂组件)*/
     class MyComponent2 extends React.Component {
       render () {
-        console.log(this) // MyComponent2的实例对象
+        console.log('ES6 Class component',this) // MyComponent2的实例对象
         return <h2>ES6类组件(复杂组件)</h2>
       }
     }
